--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halo Dunia!</title>
+</head>
+<body>
+    <h1>Selamat datang di GitHub Pages!</h1>
+</body>
+</html>
+
