--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Halo Dunia!</title>
 </head>
 <body>
-    <h1>Selamat datang di GitHub Pages!</h1>
+    <h1>Haloo Everyone!</h1>
 </body>
 </html>
 
