--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <title>Halo Dunia!</title>
 </head>
 <body>
-    <h1>Haloo Everyone!</h1>
+    <div class = "Container">
+        <div class = "Contanier Navbar">
+            <ul class = "ul-navbar">
+                    <li class = "li-navbar">
+                        <a href = "#" class = "a-navbar">HOME</a>
+                    </li>
+                    <li class = "li-navbar">
+                        <a href = "about.html"class = "a-navbar">ABOUT ME</a>
+                    </li>
+                    <li class = "li-navbar">
+                        <a href = "contact.html" class = "a-navbar">CONTACT ME</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- Navigation Bar End -->
+            
+            <!-- Content 1 -->
+            <div class = "container-content">
+                <h1 class = "content">Hi my name is NNahda Zahirah</h1>
+            </div>
+            <!-- Content 1 End -->
+            <!-- Footer -->
+            <div class = "container-footer">
+                <h1 class = "h1-footer">Halooo😎</h1>
+            
+            </div>
+            <!-- Footer End -->
+        </div>
 </body>
 </html>
 
