--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class = "a-content">
                     <img src = "background.jpeg" class = "img-content" width = 400 height = 200/>
                 </a>
-                <div class="overlay-text">Welcome in Nahda's Website</div>
+                <div class="overlay-text">Welcome to Nahda's Website</div>
             </div>
             <!-- Content 1 End -->
              
