--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel = "stylesheet" href = "style.css" />
     </head>
     <body>
-        <div class = "Container">
+        <div class = "container">
             <!-- Navigation Bar -->
             <div class = "container-navbar">
                 <ul class = "ul-navbar">
@@ -37,7 +37,7 @@
                 <ul class = "ul-footer">&copy; 2025 Nahda Zahirah. All rights reserved.
                     <a href = "#" class = "a-footer">Privacy Policy></a>
                     <a href = "#" class = "a-footer">Terms of Service></a>
-                </h1>
+                </ul>
             </div>
             <!-- Footer End -->
         </div>
