Memperbarui categories.css dan categories.html

--- a/categories.html
+++ b/categories.html
@@ -246,9 +246,21 @@
         
             <!-- YouTube 10 (centered) -->
             <div class="media-box center-box">
-                <h3>VIDEO 10</h3>
-                <iframe src="https://youtu.be/5KJc1hc08UU?si=d6pVmWLm3JV_Xy7s" frameborder="0" allowfullscreen>ANIME</iframe>
+              <h3>ANIME</h3>
+              <iframe src="https://www.youtube.com/embed/5KJc1hc08UU" frameborder="0" allowfullscreen></iframe>
             </div>
+            <div class="media-box center-box">
+              <anime controls>
+                <source src="anime/anime.gif" type="anime/gif">
+                Browser tidak mendukung audio ini.
+              </anime>
+            </div>
+            <div class="media-box center-box">
+              <anime controls>
+                <source src="anime/anime.mp4" type="anime/mp4">
+                Browser tidak mendukung audio ini.
+              </anime>
+          </div>
         </div>
     </section>
     <iframe src="https://drive.google.com/file/d/1v7afkPUpXIxJcvounfx57nMOSe2TiR10/view?usp=sharing" width="100%" height="600px"></iframe>
