update categories.css dan html

--- a/categories.html
+++ b/categories.html
@@ -245,19 +245,19 @@
             </div>
         
             <!-- YouTube 10 (centered) -->
-            <div class="media-box center-box">
+            <div class="media-box">
                 <h3>ANIME</h3>
                 <iframe src="https://www.youtube.com/embed/5KJc1hc08UU" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class="media-box center-box">
+            <div class="media-box">
               <anime controls>
-                <source src="anime/anime.gif" type="anime/gif">
+                <source src="animasi/walkingPeople.gif" type="animasi/gif">
                 Browser tidak mendukung audio ini.
               </anime>
             </div>
-            <div class="media-box center-box">
+            <div class="media-box">
               <anime controls>
-                <source src="anime/anime.mp4" type="anime/mp4">
+                <source src="animasi/walkingPeople.mp4" type="animasi/mp4">
                 Browser tidak mendukung audio ini.
               </anime>
             </div>
