--- a/categories.html
+++ b/categories.html
@@ -246,20 +246,18 @@
         
             <!-- YouTube 10 (centered) -->
             <div class="media-box">
-                <h3>ANIME</h3>
-                <iframe src="https://www.youtube.com/embed/5KJc1hc08UU" frameborder="0" allowfullscreen></iframe>
+              <h3>ANIME</h3>
+              <iframe src="https://www.youtube.com/embed/5KJc1hc08UU" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="media-box">
-              <anime controls>
-                <source src="animasi/walkingPeople.gif" type="animasi/gif">
-                Browser tidak mendukung audio ini.
-              </anime>
+              <h3>GIF WALKING PEOPLE</h3>
+              <source src="animasi/walkingPeople.gif" type="animasi/gif">
+              Browser tidak mendukung animasi ini.
             </div>
             <div class="media-box">
-              <anime controls>
-                <source src="animasi/walkingPeople.mp4" type="animasi/mp4">
-                Browser tidak mendukung audio ini.
-              </anime>
+              <h3>MP4 WALKING PEOPLE</h3>
+              <source src="animasi/walkingPeople.mp4" type="animasi/mp4">
+              Browser tidak mendukung animasi ini.
             </div>
           </div>
       </section>
