--- a/categories.html
+++ b/categories.html
@@ -244,19 +244,23 @@
                 <iframe src="https://www.youtube.com/embed/yFxTEc4Yd9A" frameborder="0" allowfullscreen></iframe>
             </div>
         
-            <!-- YouTube 10 (centered) -->
+            <!-- YouTube 10 -->
             <div class="media-box">
               <h3>ANIME</h3>
               <iframe src="https://www.youtube.com/embed/5KJc1hc08UU" frameborder="0" allowfullscreen></iframe>
             </div>
+
+            <!-- YouTube 10 -->
             <div class="media-box">
               <h3>GIF WALKING PEOPLE</h3>
-              <source src="animasi/walkingPeople.gif" type="animasi/gif">
+              <source src="animasi/walkingPeople.gif" type="WALKING PEOPLE GIF">
               Browser tidak mendukung animasi ini.
             </div>
+
+            <!-- YouTube 10 -->
             <div class="media-box">
               <h3>MP4 WALKING PEOPLE</h3>
-              <source src="animasi/walkingPeople.mp4" type="animasi/mp4">
+              <source src="animasi/walkingPeople.mp4" type="video/mp4">
               Browser tidak mendukung animasi ini.
             </div>
           </div>
