--- a/categories.html
+++ b/categories.html
@@ -253,7 +253,7 @@
             <!-- YouTube 10 -->
             <div class="media-box">
               <h3>GIF WALKING PEOPLE</h3>
-              <source src="animasi/walkingPeople.gif" type="walkingPeople/gif">
+              <source src="animasi/walkingPeople.gif" type="walking People Gif">
               Browser tidak mendukung animasi ini.
             </div>
 
