--- a/categories.html
+++ b/categories.html
@@ -178,13 +178,13 @@
           <div class="media-box"><h3>WEBM</h3><video controls><source src="video/video.webm" type="video/webm"></video></div>
           <div class="media-box"><h3>3GP</h3><video controls><source src="video/video.3gp" type="video/3gpp"></video></div>
           <div class="media-box"><h3>AVI</h3><video controls><source src="video/video.avi" type="video/avi"></video></div>
-            <div class="media-box"><h3>MKV</h3><video controls><source src="video/video.mkv" type="video/mkv"></video></div>
-            <div class="media-box"><h3>MOV</h3><video controls><source src="video/video.mov" type="video/mov"></video></div>
-            <div class="media-box"><h3>FLV</h3><video controls><source src="video/video.flv" type="video/flv"></video></div>
-            <div class="media-box"><h3>WMV</h3><video controls><source src="video/video.wmv" type="video/wmv"></video></div>
-            <div class="media-box"><h3>MPG</h3><video controls><source src="video/video.mpg" type="video/mpeg"></video></div>
-            <div class="media-box center-box"><h3>OGV</h3><video controls><source src="video/video.ogv" type="video/ogg"></video></div>
-            </div>
+          <div class="media-box"><h3>MKV</h3><video controls><source src="video/video.mkv" type="video/mkv"></video></div>
+          <div class="media-box"><h3>MOV</h3><video controls><source src="video/video.mov" type="video/mov"></video></div>
+          <div class="media-box"><h3>FLV</h3><video controls><source src="video/video.flv" type="video/flv"></video></div>
+          <div class="media-box"><h3>WMV</h3><video controls><source src="video/video.wmv" type="video/wmv"></video></div>
+          <div class="media-box"><h3>MPG</h3><video controls><source src="video/video.mpg" type="video/mpeg"></video></div>
+          <div class="media-box center-box"><h3>OGV</h3><video controls><source src="video/video.ogv" type="video/ogg"></video></div>
+          </div>
         </section>
       
       <section class="media-section">
@@ -247,20 +247,20 @@
             <!-- YouTube 10 -->
             <div class="media-box">
               <h3>ANIME</h3>
-              <iframe src="https://www.youtube.com/embed/5KJc1hc08UU" frameborder="0" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/2_5YSdrPqU8" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <!-- YouTube 10 -->
             <div class="media-box">
               <h3>GIF WALKING PEOPLE</h3>
-              <source src="animasi/walkingPeople.gif" type="walking People Gif">
+              <iframe src="animasi/walkingPeople.gif" type="walking People Gif"></iframe>
               Browser tidak mendukung animasi ini.
             </div>
 
             <!-- YouTube 10 -->
             <div class="media-box">
               <h3>MP4 WALKING PEOPLE</h3>
-              <source src="animasi/walkingPeople.mp4" type="video/mp4">
+              <iframe src="animasi/walkingPeople.mp4" type="video/mp4"></iframe>
               Browser tidak mendukung animasi ini.
             </div>
           </div>
