--- a/categories.html
+++ b/categories.html
@@ -324,7 +324,7 @@
           </div>
       </section>
       
-      <iframe src="https://drive.google.com/file/d/1v7afkPUpXIxJcvounfx57nMOSe2TiR10/view?usp=sharing" width="100%" height="600px"></iframe>
+      <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview" width="100%" height="600px" allow="autoplay"></iframe>
       
       <!-- ===== FOOTER dari template lama (adapted) ===== -->
       <footer class="container-footer">
