--- a/categories.html
+++ b/categories.html
@@ -324,7 +324,9 @@
           </div>
       </section>
       
-      <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview" width="100%" height="600px" allow="autoplay"></iframe>
+      <div class="document">
+        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview" width="60%" height="300px" allow="autoplay"></iframe>
+      </div>
       
       <!-- ===== FOOTER dari template lama (adapted) ===== -->
       <footer class="container-footer">
