--- a/categories.html
+++ b/categories.html
@@ -325,7 +325,9 @@
       </section>
       
       <div class="document">
-        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview" width="60%" height="300px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview">
+          allow = autoplay;
+        </iframe>
       </div>
       
       <!-- ===== FOOTER dari template lama (adapted) ===== -->
