--- a/categories.html
+++ b/categories.html
@@ -325,7 +325,8 @@
       </section>
       
       <div class="document">
-        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview">
+        <h2 class="document-title">LAPORAN SISTEM MULTIMEDIA</h2>
+        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview" frameborder="0" allowfullscreen>
           allow = autoplay;
         </iframe>
       </div>
