--- a/categories.html
+++ b/categories.html
@@ -53,7 +53,7 @@
     </div>
     <div class="img-box">
       <h3>JPEG</h3>
-      <img src="gambar/background2.jpeg" alt="background2.jpeg">
+      <img src="gambar/background2.ico" alt="background2.ico">
       <h3>Size 69,1 KB</h3>
     </div>
 
