--- a/categories.html
+++ b/categories.html
@@ -52,8 +52,8 @@
       <h3>Size 69,1 KB</h3>
     </div>
     <div class="img-box">
-      <h3>ICO</h3>
-      <img src="gambar/background2.ico" alt="background2.ico">
+      <h3>JPEG</h3>
+      <img src="gambar/background2.jpeg" alt="background2.jpeg">
       <h3>Size 69,1 KB</h3>
     </div>
 
@@ -326,7 +326,9 @@
       
       <div class="document">
         <h2 class="document-title">LAPORAN SISTEM MULTIMEDIA</h2>
-        <iframe src="https://drive.google.com/file/d/1g4MNgdCgyaP4jXf6vFcZahzepqGJFPWK/preview" frameborder="0" allowfullscreen>
+        <a href="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW" target="_blank" 
+        style="font-size: 18px; color: #007bff; text-decoration: none;">
+        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview">
           allow = autoplay;
         </iframe>
       </div>
