--- a/categories.html
+++ b/categories.html
@@ -325,9 +325,10 @@
       </section>
       
       <div class="document">
+        <div class="download-section">
+        <a href="dokumen/Laporan_Sistem_Multimedia.pdf" download class="download-btn"></a>
         <h2 class="document-title">LAPORAN SISTEM MULTIMEDIA</h2>
-        <a href="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW" target="_blank" 
-        style="font-size: 18px; color: #007bff; text-decoration: none;">
+        <h3>Download Laporan Sistem Multimedia</h3>
         <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview">
           allow = autoplay;
         </iframe>
