--- a/categories.html
+++ b/categories.html
@@ -326,12 +326,11 @@
       
       <div class="document">
         <div class="download-section">
-        <a href="dokumen/Laporan_Sistem_Multimedia.pdf" download class="download-btn"></a>
-        <h2 class="document-title">LAPORAN SISTEM MULTIMEDIA</h2>
-        <h3>Download Laporan Sistem Multimedia</h3>
-        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview">
-          allow = autoplay;
-        </iframe>
+            <h2 class="document-title">LAPORAN SISTEM MULTIMEDIA</h2>
+            <h3>Download Laporan Sistem Multimedia</h3>
+            <a href="dokumen/Laporan_Sistem_Multimedia.pdf" download class="download-btn">Download Laporan</a>
+            <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview" width="600" height="400" allow="autoplay"></iframe>
+        </div>
       </div>
       
       <!-- ===== FOOTER dari template lama (adapted) ===== -->
