--- a/categories.html
+++ b/categories.html
@@ -52,8 +52,8 @@
       <h3>Size 69,1 KB</h3>
     </div>
     <div class="img-box">
-      <h3>JPEG</h3>
-      <img src="gambar/background2.jpeg" alt="background2.jpeg">
+      <h3>ICO</h3>
+      <img src="gambar/background2.ico" alt="background2.ico">
       <h3>Size 69,1 KB</h3>
     </div>
 
@@ -325,11 +325,8 @@
       </section>
       
       <div class="document">
-        <div class="download-section">
-        <a href="dokumen/Laporan_Sistem_Multimedia.pdf" download class="download-btn"></a>
         <h2 class="document-title">LAPORAN SISTEM MULTIMEDIA</h2>
-        <h3>Download Laporan Sistem Multimedia</h3>
-        <iframe src="https://drive.google.com/file/d/1NEE0frOaHmisJkE6UxNXns3Li22pp8rW/preview">
+        <iframe src="https://drive.google.com/file/d/1g4MNgdCgyaP4jXf6vFcZahzepqGJFPWK/preview" frameborder="0" allowfullscreen>
           allow = autoplay;
         </iframe>
       </div>
